<resources>
    <string name="app_name">Advance Healing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_desc_fidgetgame_btn">FidgetSpinner_btn</string>
    <string name="fidget_spinner_game">Fidget Spinner Game</string>
    <string name="content_desc_vibrationgame_btn">\@string/content_desc_vibrationgame_btn</string>
    <string name="content_desc_tictactoe_btn">\@string/content_desc_tictactoe_btn</string>
    <string name="content_desc_fireworkgame_btn">\@string/content_desc_fireworkgame_btn</string>
    <string name="content_desc_startbtn">\@string/content_desc_startbtn</string>
    <string name="content_desc_stopbtn">\@string/content_desc_stopbtn</string>
    <string name="content_desc_backbtn">\@string/content_desc_backbtn</string>
    <string name="content_desc_music2_btn">\@string/content_desc_music2_btn</string>
    <string name="content_desc_music1_btn">\@string/content_desc_music1_btn</string>
    <string name="content_desc_savebtn">\@string/content_desc_savebtn</string>
    <string name="content_desc_historybtn">\@string/content_desc_historybtn</string>
    <string name="content_desc_routineView_btn">\@string/content_desc_routineView_btn</string>
    <string name="content_desc_add_btn">\@string/content_desc_add_btn</string>
    <string name="content_desc_delete_btn">\@string/content_desc_delete_btn</string>
    <string name="content_desc_introBtn">\@string/content_desc_introBtn</string>
    <string name="content_desc_intentionsBtn" />
    <string name="content_desc_storiesBtn" />
    <string name="content_desc_thoughtsBtn" />
    <string name="content_desc_vid1Btn" />
    <string name="content_desc_vid2Btn" />
    <string name="content_desc_reachingoutBtn" />
    <string name="content_desc_stayinghonestBtn" />
    <string name="content_desc_storiesBtn1" />
    <string name="content_desc_storiesBtn2" />
    <string name="content_desc_storiesBtn3" />
    <string name="content_desc_deletethoughtsBtn" />
    <string name="content_desc_createbtn">\@string/content_desc_createbtn</string>
    <string name="content_desc_hide" />
    <string name="content_desc_stop1_btn" />
    <string name="content_desc_stop2_btn" />
    <string name="content_desc_beginbtn" />
</resources>