<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nav5background"
    tools:context=".NAV5Fragment">

    <ImageButton
        android:id="@+id/introBtn"
        android:layout_width="383dp"
        android:layout_height="115dp"
        android:background="@drawable/nav5btn1"
        android:contentDescription="@string/content_desc_introBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <ImageButton
        android:id="@+id/intentionsBtn"
        android:layout_width="383dp"
        android:layout_height="115dp"
        android:background="@drawable/nav5btn2"
        android:contentDescription="@string/content_desc_intentionsBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.440" />

    <ImageButton
        android:id="@+id/storiesBtn"
        android:layout_width="383dp"
        android:layout_height="115dp"
        android:background="@drawable/nav5btn3"
        android:contentDescription="@string/content_desc_storiesBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <ImageButton
        android:id="@+id/thoughtsBtn"
        android:layout_width="391dp"
        android:layout_height="115dp"
        android:background="@drawable/nav5btn4"
        android:contentDescription="@string/content_desc_thoughtsBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

</androidx.constraintlayout.widget.ConstraintLayout>